// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagGroup Grouped tags with TagGroup 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.125rem 0.25rem;
  font-size: .625rem;
  line-height: .875rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.25rem 0.5rem;
  font-size: .75rem;
  line-height: 1rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.25rem 0.625rem;
  font-size: .875rem;
  line-height: 1.25rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.25rem 0.5rem;
  font-size: .75rem;
  line-height: 1rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
  gap: 0.25rem;
}

.c5 {
  cursor: pointer;
  opacity: 0.2;
}

.c5:hover {
  opacity: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 0.5rem;
  font-size: .75rem;
}

.c6 {
  cursor: pointer;
  color: hsla(0,0%,32%,1);
  opacity: 0.2;
}

.c6:hover {
  opacity: 1;
}

<body>
    <div>
      <div
        class="c0"
        role="listbox"
      >
        <div
          class="c1"
          role="listitem"
        >
          html
        </div>
        <div
          class="c2"
          role="listitem"
        >
          typescript
        </div>
        <div
          class="c3"
          role="listitem"
        >
          javascript
        </div>
        <div
          class="c2"
          disabled=""
          role="listitem"
        >
          cloud
        </div>
        <div
          class="c4"
          role="listitem"
        >
          <span
            style="display: flex; height: 1.25em; width: 1.25em;"
          >
            <span
              style="display: flex; height: 1.25em; width: 1.25em;"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                style="display: flex; height: 1.25em; width: 1.25em;"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                />
              </svg>
            </span>
          </span>
          kotlin
          <span
            role="button"
            style="display: flex; height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c5"
              fill="currentColor"
              focusable="false"
              style="display: flex; height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
        </div>
        <span
          role="button"
          style="display: flex; height: 1.8em; width: 1.8em;"
        >
          <svg
            aria-hidden="true"
            class="c6"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.8em; width: 1.8em;"
            tone="neutral"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
            />
          </svg>
        </span>
      </div>
    </div>
  </body>,
  "container": .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.125rem 0.25rem;
  font-size: .625rem;
  line-height: .875rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.25rem 0.5rem;
  font-size: .75rem;
  line-height: 1rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.25rem 0.625rem;
  font-size: .875rem;
  line-height: 1.25rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.25rem 0.5rem;
  font-size: .75rem;
  line-height: 1rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
  gap: 0.25rem;
}

.c5 {
  cursor: pointer;
  opacity: 0.2;
}

.c5:hover {
  opacity: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 0.5rem;
  font-size: .75rem;
}

.c6 {
  cursor: pointer;
  color: hsla(0,0%,32%,1);
  opacity: 0.2;
}

.c6:hover {
  opacity: 1;
}

<div>
    <div
      class="c0"
      role="listbox"
    >
      <div
        class="c1"
        role="listitem"
      >
        html
      </div>
      <div
        class="c2"
        role="listitem"
      >
        typescript
      </div>
      <div
        class="c3"
        role="listitem"
      >
        javascript
      </div>
      <div
        class="c2"
        disabled=""
        role="listitem"
      >
        cloud
      </div>
      <div
        class="c4"
        role="listitem"
      >
        <span
          style="display: flex; height: 1.25em; width: 1.25em;"
        >
          <span
            style="display: flex; height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              style="display: flex; height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              />
            </svg>
          </span>
        </span>
        kotlin
        <span
          role="button"
          style="display: flex; height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c5"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
      </div>
      <span
        role="button"
        style="display: flex; height: 1.8em; width: 1.8em;"
      >
        <svg
          aria-hidden="true"
          class="c6"
          fill="currentColor"
          focusable="false"
          style="display: flex; height: 1.8em; width: 1.8em;"
          tone="neutral"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
          />
        </svg>
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TagGroup Grouped tags with TagGroup margin 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.125rem 0.25rem;
  font-size: .625rem;
  line-height: .875rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.25rem 0.5rem;
  font-size: .75rem;
  line-height: 1rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.25rem 0.625rem;
  font-size: .875rem;
  line-height: 1.25rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.25rem 0.5rem;
  font-size: .75rem;
  line-height: 1rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
  gap: 0.25rem;
}

.c5 {
  cursor: pointer;
  opacity: 0.2;
}

.c5:hover {
  opacity: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 0.5rem;
  font-size: .75rem;
  margin: 0 0 1rem 0;
}

.c6 {
  cursor: pointer;
  color: hsla(0,0%,32%,1);
  opacity: 0.2;
}

.c6:hover {
  opacity: 1;
}

<body>
    <div>
      <div
        class="c0"
        role="listbox"
      >
        <div
          class="c1"
          role="listitem"
        >
          html
        </div>
        <div
          class="c2"
          role="listitem"
        >
          typescript
        </div>
        <div
          class="c3"
          role="listitem"
        >
          javascript
        </div>
        <div
          class="c2"
          disabled=""
          role="listitem"
        >
          cloud
        </div>
        <div
          class="c4"
          role="listitem"
        >
          <span
            style="display: flex; height: 1.25em; width: 1.25em;"
          >
            <span
              style="display: flex; height: 1.25em; width: 1.25em;"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                style="display: flex; height: 1.25em; width: 1.25em;"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                />
              </svg>
            </span>
          </span>
          kotlin
          <span
            role="button"
            style="display: flex; height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c5"
              fill="currentColor"
              focusable="false"
              style="display: flex; height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
        </div>
        <span
          role="button"
          style="display: flex; height: 1.8em; width: 1.8em;"
        >
          <svg
            aria-hidden="true"
            class="c6"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.8em; width: 1.8em;"
            tone="neutral"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
            />
          </svg>
        </span>
      </div>
    </div>
  </body>,
  "container": .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.125rem 0.25rem;
  font-size: .625rem;
  line-height: .875rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.25rem 0.5rem;
  font-size: .75rem;
  line-height: 1rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.25rem 0.625rem;
  font-size: .875rem;
  line-height: 1.25rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.25rem 0.5rem;
  font-size: .75rem;
  line-height: 1rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
  gap: 0.25rem;
}

.c5 {
  cursor: pointer;
  opacity: 0.2;
}

.c5:hover {
  opacity: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 0.5rem;
  font-size: .75rem;
  margin: 0 0 1rem 0;
}

.c6 {
  cursor: pointer;
  color: hsla(0,0%,32%,1);
  opacity: 0.2;
}

.c6:hover {
  opacity: 1;
}

<div>
    <div
      class="c0"
      role="listbox"
    >
      <div
        class="c1"
        role="listitem"
      >
        html
      </div>
      <div
        class="c2"
        role="listitem"
      >
        typescript
      </div>
      <div
        class="c3"
        role="listitem"
      >
        javascript
      </div>
      <div
        class="c2"
        disabled=""
        role="listitem"
      >
        cloud
      </div>
      <div
        class="c4"
        role="listitem"
      >
        <span
          style="display: flex; height: 1.25em; width: 1.25em;"
        >
          <span
            style="display: flex; height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              style="display: flex; height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              />
            </svg>
          </span>
        </span>
        kotlin
        <span
          role="button"
          style="display: flex; height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c5"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
      </div>
      <span
        role="button"
        style="display: flex; height: 1.8em; width: 1.8em;"
      >
        <svg
          aria-hidden="true"
          class="c6"
          fill="currentColor"
          focusable="false"
          style="display: flex; height: 1.8em; width: 1.8em;"
          tone="neutral"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
          />
        </svg>
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TagGroup TagGroup mutating by blurring the input 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.125rem 0.25rem;
  font-size: .625rem;
  line-height: .875rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
  gap: 0.25rem;
}

.c2 {
  cursor: pointer;
  opacity: 0.2;
}

.c2:hover {
  opacity: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 0.5rem;
  font-size: .625rem;
}

.c3 {
  cursor: pointer;
  color: hsla(0,0%,32%,1);
  opacity: 0.2;
}

.c3:hover {
  opacity: 1;
}

<body>
    <div>
      <div
        class="c0"
        role="listbox"
      >
        <div
          class="c1"
          role="listitem"
        >
          react
          <span
            role="button"
            style="display: flex; height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              style="display: flex; height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
        </div>
        <div
          class="c1"
          role="listitem"
        >
          java
          <span
            role="button"
            style="display: flex; height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              style="display: flex; height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
        </div>
        <div
          class="c1"
          role="listitem"
        >
          cloud
          <span
            role="button"
            style="display: flex; height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              style="display: flex; height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
        </div>
        <div
          class="c1"
          role="listitem"
        >
          scss
          <span
            role="button"
            style="display: flex; height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              style="display: flex; height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
        </div>
        <span
          role="button"
          style="display: flex; height: 1.8em; width: 1.8em;"
        >
          <svg
            aria-hidden="true"
            class="c3"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.8em; width: 1.8em;"
            tone="neutral"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
            />
          </svg>
        </span>
      </div>
    </div>
  </body>,
  "container": .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.125rem 0.25rem;
  font-size: .625rem;
  line-height: .875rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
  gap: 0.25rem;
}

.c2 {
  cursor: pointer;
  opacity: 0.2;
}

.c2:hover {
  opacity: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 0.5rem;
  font-size: .625rem;
}

.c3 {
  cursor: pointer;
  color: hsla(0,0%,32%,1);
  opacity: 0.2;
}

.c3:hover {
  opacity: 1;
}

<div>
    <div
      class="c0"
      role="listbox"
    >
      <div
        class="c1"
        role="listitem"
      >
        react
        <span
          role="button"
          style="display: flex; height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
      </div>
      <div
        class="c1"
        role="listitem"
      >
        java
        <span
          role="button"
          style="display: flex; height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
      </div>
      <div
        class="c1"
        role="listitem"
      >
        cloud
        <span
          role="button"
          style="display: flex; height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
      </div>
      <div
        class="c1"
        role="listitem"
      >
        scss
        <span
          role="button"
          style="display: flex; height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
      </div>
      <span
        role="button"
        style="display: flex; height: 1.8em; width: 1.8em;"
      >
        <svg
          aria-hidden="true"
          class="c3"
          fill="currentColor"
          focusable="false"
          style="display: flex; height: 1.8em; width: 1.8em;"
          tone="neutral"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
          />
        </svg>
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TagGroup TagGroup mutating by clicking enter 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.125rem 0.25rem;
  font-size: .625rem;
  line-height: .875rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
  gap: 0.25rem;
}

.c2 {
  cursor: pointer;
  opacity: 0.2;
}

.c2:hover {
  opacity: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 0.5rem;
  font-size: .625rem;
}

.c3 {
  cursor: pointer;
  color: hsla(0,0%,32%,1);
  opacity: 0.2;
}

.c3:hover {
  opacity: 1;
}

<body>
    <div>
      <div
        class="c0"
        role="listbox"
      >
        <div
          class="c1"
          role="listitem"
        >
          react
          <span
            role="button"
            style="display: flex; height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              style="display: flex; height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
        </div>
        <div
          class="c1"
          role="listitem"
        >
          java
          <span
            role="button"
            style="display: flex; height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              style="display: flex; height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
        </div>
        <div
          class="c1"
          role="listitem"
        >
          cloud
          <span
            role="button"
            style="display: flex; height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              style="display: flex; height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
        </div>
        <div
          class="c1"
          role="listitem"
        >
          scss
          <span
            role="button"
            style="display: flex; height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              style="display: flex; height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
        </div>
        <span
          role="button"
          style="display: flex; height: 1.8em; width: 1.8em;"
        >
          <svg
            aria-hidden="true"
            class="c3"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.8em; width: 1.8em;"
            tone="neutral"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
            />
          </svg>
        </span>
      </div>
    </div>
  </body>,
  "container": .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.125rem 0.25rem;
  font-size: .625rem;
  line-height: .875rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
  gap: 0.25rem;
}

.c2 {
  cursor: pointer;
  opacity: 0.2;
}

.c2:hover {
  opacity: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 0.5rem;
  font-size: .625rem;
}

.c3 {
  cursor: pointer;
  color: hsla(0,0%,32%,1);
  opacity: 0.2;
}

.c3:hover {
  opacity: 1;
}

<div>
    <div
      class="c0"
      role="listbox"
    >
      <div
        class="c1"
        role="listitem"
      >
        react
        <span
          role="button"
          style="display: flex; height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
      </div>
      <div
        class="c1"
        role="listitem"
      >
        java
        <span
          role="button"
          style="display: flex; height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
      </div>
      <div
        class="c1"
        role="listitem"
      >
        cloud
        <span
          role="button"
          style="display: flex; height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
      </div>
      <div
        class="c1"
        role="listitem"
      >
        scss
        <span
          role="button"
          style="display: flex; height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
      </div>
      <span
        role="button"
        style="display: flex; height: 1.8em; width: 1.8em;"
      >
        <svg
          aria-hidden="true"
          class="c3"
          fill="currentColor"
          focusable="false"
          style="display: flex; height: 1.8em; width: 1.8em;"
          tone="neutral"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
          />
        </svg>
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TagGroup TagGroup mutating without any addNewTag function param 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.125rem 0.25rem;
  font-size: .625rem;
  line-height: .875rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
  gap: 0.25rem;
}

.c2 {
  cursor: pointer;
  opacity: 0.2;
}

.c2:hover {
  opacity: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 0.5rem;
  font-size: .625rem;
}

.c3 {
  cursor: pointer;
  color: hsla(0,0%,32%,1);
  opacity: 0.2;
}

.c3:hover {
  opacity: 1;
}

<body>
    <div>
      <div
        class="c0"
        role="listbox"
      >
        <div
          class="c1"
          role="listitem"
        >
          react
          <span
            role="button"
            style="display: flex; height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              style="display: flex; height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
        </div>
        <div
          class="c1"
          role="listitem"
        >
          java
          <span
            role="button"
            style="display: flex; height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              style="display: flex; height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
        </div>
        <div
          class="c1"
          role="listitem"
        >
          cloud
          <span
            role="button"
            style="display: flex; height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              style="display: flex; height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
        </div>
        <div
          class="c1"
          role="listitem"
        >
          scss
          <span
            role="button"
            style="display: flex; height: 1.25em; width: 1.25em;"
          >
            <svg
              aria-hidden="true"
              class="c2"
              fill="currentColor"
              focusable="false"
              style="display: flex; height: 1.25em; width: 1.25em;"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
        </div>
        <span
          role="button"
          style="display: flex; height: 1.8em; width: 1.8em;"
        >
          <svg
            aria-hidden="true"
            class="c3"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.8em; width: 1.8em;"
            tone="neutral"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
            />
          </svg>
        </span>
      </div>
    </div>
  </body>,
  "container": .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 0.125rem 0.25rem;
  font-size: .625rem;
  line-height: .875rem;
  color: hsla(0,0%,15%,1);
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,32%,1);
  gap: 0.25rem;
}

.c2 {
  cursor: pointer;
  opacity: 0.2;
}

.c2:hover {
  opacity: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 0.5rem;
  font-size: .625rem;
}

.c3 {
  cursor: pointer;
  color: hsla(0,0%,32%,1);
  opacity: 0.2;
}

.c3:hover {
  opacity: 1;
}

<div>
    <div
      class="c0"
      role="listbox"
    >
      <div
        class="c1"
        role="listitem"
      >
        react
        <span
          role="button"
          style="display: flex; height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
      </div>
      <div
        class="c1"
        role="listitem"
      >
        java
        <span
          role="button"
          style="display: flex; height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
      </div>
      <div
        class="c1"
        role="listitem"
      >
        cloud
        <span
          role="button"
          style="display: flex; height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
      </div>
      <div
        class="c1"
        role="listitem"
      >
        scss
        <span
          role="button"
          style="display: flex; height: 1.25em; width: 1.25em;"
        >
          <svg
            aria-hidden="true"
            class="c2"
            fill="currentColor"
            focusable="false"
            style="display: flex; height: 1.25em; width: 1.25em;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
      </div>
      <span
        role="button"
        style="display: flex; height: 1.8em; width: 1.8em;"
      >
        <svg
          aria-hidden="true"
          class="c3"
          fill="currentColor"
          focusable="false"
          style="display: flex; height: 1.8em; width: 1.8em;"
          tone="neutral"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
          />
        </svg>
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
